Add Reservations Routes
