# src/routes/v1/brunchs/brunchs-route.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 import { AppDataSource } from "../../../data-source";
 import { Brunch } from "../../../entities/Brunch";
 import { brunchItemsRouter } from "./items/items-route";
+import { brunchReservationsRouter } from "./reservations/reservations-route";
 
 export const brunchsRouter = Router();
 
@@ -11,8 +12,8 @@ brunchsRouter.get("/:id", getBrunchById);
 brunchsRouter.put("/:id", updateBrunch);
 brunchsRouter.delete("/:id", deleteBrunch);
 
-// router use /brunchs/:id/items
 brunchsRouter.use("/:id/items", brunchItemsRouter);
+brunchsRouter.use("/:id/reservations", brunchReservationsRouter);
 
 async function getBrunchs(req, res) {
   // #swagger.tags = ['Brunchs']
