# src/swagger_output.json
@@ -25,17 +25,37 @@
   ],
   "tags": [
     {
+      "name": "API",
+      "description": "API Description"
+    },
+    {
       "name": "Users",
       "description": "Operations about Backoffice users"
     },
     {
       "name": "Recommendations",
       "description": "Operations about Recommendations"
+    },
+    {
+      "name": "Brunchs",
+      "description": "Operations about Brunchs"
+    },
+    {
+      "name": "Brunchs Items",
+      "description": "Operations about Brunchs Items"
+    },
+    {
+      "name": "Brunchs Reservations",
+      "description": "Operations about Brunchs Reservations"
     }
   ],
   "paths": {
     "/": {
       "get": {
+        "tags": [
+          "API"
+        ],
+        "summary": "API v1",
         "description": "",
         "responses": {
           "200": {
@@ -483,11 +503,24 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -574,11 +607,24 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -604,11 +650,24 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -763,11 +822,256 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/brunchs/{id}/reservations/": {
+      "post": {
+        "tags": [
+          "Brunchs Reservations"
+        ],
+        "summary": "Create a new brunch reservation",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "customer_name": {
+                    "example": "any"
+                  },
+                  "customer_email": {
+                    "example": "any"
+                  },
+                  "customer_phone": {
+                    "example": "any"
+                  },
+                  "company_name": {
+                    "example": "any"
+                  },
+                  "reservation_date": {
+                    "example": "any"
+                  },
+                  "number_of_people": {
+                    "example": "any"
+                  },
+                  "table_number": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Brunchs Reservations"
+        ],
+        "summary": "Get all brunch reservations",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/brunchs/{id}/reservations/{reservationId}": {
+      "get": {
+        "tags": [
+          "Brunchs Reservations"
+        ],
+        "summary": "Get a brunch reservation by Id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "reservationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Brunchs Reservations"
+        ],
+        "summary": "Update a brunch reservation by Id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "reservationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "customer_name": {
+                    "example": "any"
+                  },
+                  "customer_email": {
+                    "example": "any"
+                  },
+                  "customer_phone": {
+                    "example": "any"
+                  },
+                  "company_name": {
+                    "example": "any"
+                  },
+                  "reservation_date": {
+                    "example": "any"
+                  },
+                  "number_of_people": {
+                    "example": "any"
+                  },
+                  "table_number": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Brunchs Reservations"
+        ],
+        "summary": "Delete a brunch reservation by Id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "reservationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "404": {
             "description": "Not Found"
